--- a/index.html
+++ b/index.html
@@ -38,12 +38,43 @@
         </div>
     </nav>
 
+    <!-- CAROUSEL SECTION -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" style="height:500px !important;">
+          <div class="carousel-item active">
+            <img src="./Assets/images/gavdos.jpg" class="d-block w-100" alt="..." style="align-self: center;">
+          </div>
+          <div class="carousel-item">
+            <img src="./Assets/images/milos.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./Assets/images/hydra.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
     <!-- MAIN CONTENT SECTION -->
     <main class="container" id="mainContent">
+
         <h1 id="MainTitle" class="col-lg-offset-1 col-lg-10">The Travel Report</h1>
-        <h4 class="col-lg-offset-1 col-lg-10">body copy and image credits: Sophie-Claire Hoeller</h4>
+        <h6 class="col-lg-offset-1 col-lg-10"><i>Body copy and image credits to Sophie-Claire Hoeller</i></h6>
+        <br>
         <article id="9Islands" class="row">
             <h2 class="col-md-offset-1 col-md-10 col-xs-offset-1 col-xs-10">9 Gorgeous Greek islands</h2>
+            <br><br>
             <p id="IntroParagraph" class="col-md-4 col-xs-offset-1 col-xs-10">
                 <!-- Inject your IntroParagraph here -->
 
@@ -185,7 +216,7 @@
     <div class="container">
         <footer>
             <nav class="navbar fixed-bottom navbar-light bg-light">
-                <h4>&copy; Copyright 2020 - The Travel Report</h4>
+                <h6>&copy; Copyright 2020 - The Travel Report</h6>
             </nav>
         </footer>
     </div>
