--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+    
     <!-- CSS Section -->
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
@@ -15,7 +16,7 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="">
             <i class="fa fa-globe fa-lg"></i>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -89,7 +90,7 @@
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Folegandros</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/folegandros.jpg" alt="Folegandros">
+            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="./Assets/images/folegandros.jpg" alt="Folegandros">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Folegandros">
                 <!-- Inject your Folegandros paragraph here -->
             </p>
@@ -98,7 +99,7 @@
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Alonissos</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/alonissos.jpg" alt="Alonissos">
+            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="./Assets/images/alonissos.jpg" alt="Alonissos">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Alonissos">
                 <!-- Inject your Alonissos paragraph here -->
             </p>
@@ -107,7 +108,7 @@
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Spetses</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/spetses.jpg" alt="Spetses">
+            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="./Assets/images/spetses.jpg" alt="Spetses">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Spetses">
                 <!-- Inject your Spetses paragraph here -->
             </p>
@@ -116,7 +117,7 @@
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Amorgos</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/amorgos.jpg" alt="Amorgos">
+            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="./Assets/images/amorgos.jpg" alt="Amorgos">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Amorgos">
                 <!-- Inject your Amorgos paragraph here -->
             </p>
@@ -125,7 +126,7 @@
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Syros</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/syros.jpg" alt="Syros">
+            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="./Assets/images/syros.jpg" alt="Syros">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Syros">
                 <!-- Inject your Syros paragraph here -->
             </p>
@@ -134,7 +135,7 @@
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Milos</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/milos.jpg" alt="Milos">
+            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="./Assets/images/milos.jpg" alt="Milos">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Milos">
                 <!-- Inject your Milos paragraph here -->
             </p>
@@ -143,7 +144,7 @@
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Hydra</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/hydra.jpg" alt="Hydra">
+            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="./Assets/images/hydra.jpg" alt="Hydra">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Hydra">
                 <!-- Inject your Hydra paragraph here -->
             </p>
@@ -153,7 +154,7 @@
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Ithaca</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/ithaca.jpg" alt="Ithaca">
+            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="./Assets/images/ithaca.jpg" alt="Ithaca">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Ithaca">
                 <!-- Inject your Ithaca paragraph here -->
             </p>
@@ -162,12 +163,13 @@
 
         <article class="row">
             <h2 class="col-md-10 col-xs-offset-1 col-xs-10">Gavdos</h2>
-            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/gavdos.jpg" alt="Gavdos">
+            <img class="col-md-10 col-xs-offset-1 col-xs-10" src="./Assets/images/gavdos.jpg" alt="Gavdos">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Gavdos">
                 <!-- Inject your Gavdos paragraph here -->
             </p>
         </article>
         <hr>
+
     </main>
 
     <!-- CONTACT SECTION -->
@@ -192,7 +194,7 @@
                             </div>
                             <div class="form-group">
                                 <label class="form-label" for="contactNumber">Contact Number</label>
-                                <input type="tel" class="form-control" id="contactNumber" name="email" placeholder="Contact Number" required>
+                                <input type="tel" class="form-control" id="contactNumber" name="contactNumber" placeholder="Contact Number" required>
                             </div>
                             <div class="form-group">
                                 <label class="form-label" for="email">Email</label>
@@ -200,10 +202,10 @@
                             </div>
                             <div class="form-group">
                                 <label for="comments">Your Message</label>
-                                <textarea class="form-control" rows="5" id="yourMessage" name="comments" placeholder="Enter Your Comments Here" required></textarea>
+                                <textarea class="form-control" rows="5" id="yourMessage" name="yourMessage" placeholder="Enter Your Comments Here" required></textarea>
                             </div>
                             <div class="text-right">
-                                <button id="sendButton" type="submit" class="btn btn-primary">Send</button>
+                                <button id="sendButton" type="button" class="btn btn-primary">Send</button>
                             </div>
                         </form>
                     </div>
@@ -221,7 +223,7 @@
         </footer>
     </div>
 
-    <!-- JavaScript Section -->
+    <!-- JAVASCRIPT SECTION -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./Scripts/app.js"></script>
