--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner" style="height:500px !important;">
+        <div class="carousel-inner" style="height:400px !important;">
           <div class="carousel-item active">
-            <img src="./Assets/images/gavdos.jpg" class="d-block w-100" alt="..." style="align-self: center;">
+            <a href="#Gavdos"><img src="./Assets/images/gavdos.jpg" class="d-block w-100" alt="..."></a>
           </div>
           <div class="carousel-item">
-            <img src="./Assets/images/milos.jpg" class="d-block w-100" alt="...">
+            <a href="#Milos"><img src="./Assets/images/milos.jpg" class="d-block w-100" alt="..."></a>
           </div>
           <div class="carousel-item">
-            <img src="./Assets/images/hydra.jpg" class="d-block w-100" alt="...">
+            <a href="#Hydra"><img src="./Assets/images/hydra.jpg" class="d-block w-100" alt="..."></a>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
